--- a/app/src/main/res/layout/activity_object_detecting.xml
+++ b/app/src/main/res/layout/activity_object_detecting.xml
@@ -14,6 +14,13 @@
         android:onClick="swapCamera"
         android:text="切换摄像头" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:onClick="checkAgain"
+        android:text="重新检测" />
+
     <RadioGroup
         android:id="@+id/radio_group"
         android:layout_width="wrap_content"
@@ -60,4 +67,18 @@
 
     </RadioGroup>
 
+    <ImageView
+        android:id="@+id/face_preview"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentBottom="true" />
+
+    <ImageView
+        android:id="@+id/face_preview_1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@mipmap/ic_launcher"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
